tests/resource/valid/function/match_function.mamba
def f(x: Int) -> Str =>
    match x
        1 => "One"
        2 => "Two"
        _ => "Three"
