tests/resource/invalid/type/function/statement_as_param.mamba
def f(x: Int) -> Int => x
def g() => print("statement")

f(g())
